--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <div>
     <hr/>
-
-    <p>It doesn't hurt to plan out your weekend, so let's get started!</p>
-    
-    <h3>Here are a few options to choose from:</h3>
-    <div class="background-one">
+    <div class="declaration">
+    <h1>It doesn't hurt to plan out your weekend, so let's get started!</h1>
+    <p> Here are a few options to choose from:</p>
+    </div>
+    <div class="todolist">
     <ul>
         <li><s>You've been ignoring those dishes, maybe wash them?</s></li>
         <li>How many books have you not started, but want to read?</li>
@@ -27,17 +27,17 @@
         <li><s>Maybe get some homework done?</s></li>
         <li>Getting caught up on some TV could kill a few hours.</li>
     </ul>
-</div>
-<div class="container">
-    <h3>You can see what you've been missing on Netflix, check out their programming</h3>
+    </div>
+<div id="links">
+    <h2>You can see what you've been missing on Netflix, check out their programming</h2>
     <a href="https://www.netflix.com/" target="_blank">Netflix</a>
-</div>
-
-    <h3>Here is the latest PoGo news</h3>
+    <h2>Here is the latest PoGo news</h2>
     <a href="https://pokemongolive.com/" target="_blank">Pokemon Go</a>
-
-    <h3>Choose something fun or you'll end up like this:</h3>
+</div>
+    <div id="catface">
+    <h2>Choose something fun or you'll end up like this:</h2>
     <img src="https://truedungeon.com/media/kunena/avatars/resized/size72/users/avatar6946.jpg" alt="Dungeon Cat" width="200" length="200"/>
- 
+    </div>
+</div>
 </body>
 </html>
